minified css for main form, remove offline link

--- a/src/login.html
+++ b/src/login.html
@@ -37,6 +37,6 @@
         </button>
     </div>
     </div>
-    <br><small><a href="offline.html" style="color: #2997ff">Access Offline Version</a></small>
+    <!--<br><small><a href="offline.html" style="color: #2997ff">Access Offline Version</a></small>-->
 </body>
 </html>
