--- a/src/main.html
+++ b/src/main.html
@@ -169,15 +169,11 @@
             <input type="tel" name="game11" required class="smallerInput"> seconds
         </fieldset>
         <fieldset>
-            <label>Thoughts about the teleop phase<br><br></label>
-            <textarea rows="2" cols="35" name="teleop"></textarea>
-        </fieldset>
-        <fieldset>
             <label>Did the robot play defense? If so, what did they do, and did they get fouls?<br><br></label>
             <textarea rows="2" cols="35" name="defend"></textarea>
         </fieldset>
         <fieldset>
-            <label>Thoughts about driving<br><br></label>
+            <label>Thoughts about driving and performance during teleop phase<br><br></label>
             <textarea rows="2" cols="35" name="driving"></textarea>
         </fieldset>
         <fieldset>
