--- a/src/scouts.html
+++ b/src/scouts.html
@@ -81,7 +81,7 @@
                   </table>
             </fieldset>
             <!--buttons-->
-            <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" id="viewScoutsButton" onclick="getTeamRanks()">Reload</button><br>
+            <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
             <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem;; margin-top: 1rem;" onclick="goToHome()">Back</button>
             </fieldset>
         <br><br>
@@ -106,7 +106,7 @@
                 document.getElementById("search").style.display = "none";
                 document.getElementById("results").style.display = "flex";
                 document.getElementById("eventCodeDisplay").innerHTML = `Top scouts`;
-                document.getElementById("viewScoutsButton").innerHTML = "View";
+                document.getElementById("viewScoutsButton").innerHTML = "Reload Data";
             } else if (xhr.status === 401) {
                 console.log("401 failure")
                 document.getElementById("viewScoutsButton").innerHTML = "401 Unauthorized";
