change # of columns

--- a/src/scouts.html
+++ b/src/scouts.html
@@ -76,7 +76,7 @@
                 <table>
                     <tr id="preInsert">
                       <th>Scout Name</th>
-                      <th colspan="2">Score</th> 
+                      <th>Score</th> 
                     </tr>
                   </table>
             </fieldset>
