--- a/src/scouts.html
+++ b/src/scouts.html
@@ -86,7 +86,7 @@
             let discordID = params.get("discordID")
             document.getElementById("viewScoutsButton").innerHTML = "Requesting Data...";
             const xhr = new XMLHttpRequest();
-            xhr.open("GET", `/api/scoutByID/${discordID}`, true);
+            xhr.open("GET", `/api/scouts`, true);
             xhr.withCredentials = true;
 
             xhr.onreadystatechange = () => {
