--- a/src/scoutProfile.html
+++ b/src/scoutProfile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Matches - 766 Scouting</title>
+    <title>Scout Profile - 766 Scouting</title>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
@@ -33,7 +33,7 @@
     <script>themeHandle()</script>
     <div class="container" id="search" style="display: flex;">
         <div class="maincontent">
-            <h1 style="font-family: 'raleway-300'">2023 Matches<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+            <h1 style="font-family: 'raleway-300'">2023 Scout Profile<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
             <fieldset>
                 <label>Event Code: </label><br>
                 <select name="event" id="eventCode">
@@ -48,7 +48,7 @@
     </div>
     <div class="container" id="results" style="display: none;"> <!--flex is shown-->
         <div class="dummy">
-            <h1 style="font-family: 'raleway-300'" id="matchHeader">2023 Matches<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+            <h1 style="font-family: 'raleway-300'" id="matchHeader">2023 Scout Profile<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
             
             <!--buttons-->
             <button style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" onclick='goToHome()'>Back</button><br>
