--- a/src/casino.html
+++ b/src/casino.html
@@ -101,6 +101,9 @@
                 alert.style.display = "inline"
             }
         }
+        function goToHome() {
+            window.location.href = "/";
+        }
     </script>
 </body>
 </html>
