--- a/src/pit.html
+++ b/src/pit.html
@@ -44,9 +44,9 @@
                 </fieldset>
 
                 <h2 class="gameflair1">Pit Scouting</h2>
-                <h4 style="color: #a9a9a9;">&emsp;If you don't know the answer, just ask the team themselves</h4>
+                <!--<h4 style="color: #a9a9a9;">&emsp;If you don't know the answer, just ask the team themselves</h4-->
 
-                <fieldset>
+                <!--<fieldset>
                     <label>Drive Type<br></label>
                     <select name="drivetype">
                         <option value="westcoast">Westcoast</option>
@@ -58,7 +58,7 @@
                     <label>Experience<br></label>
                     <input type="text" name="driveTeam" class="smallerInput"> Days of drive team work<br>
                     <input placeholder="0 or 1" type="text" name="attended" class="smallerInput"> Attended events
-                </fieldset>
+                </fieldset>-->
 
                 <input value="0" type="number" name="game1" hidden>
                 <input value="0" type="number" name="game2" hidden>
@@ -81,9 +81,14 @@
                 <input value="0" type="number" name="game19" hidden>
                 <input value="0" type="number" name="game20" hidden>
 
+                <input value="0" type="number" name="overall" hidden>
+                <input value="0" type="number" name="drivetype" hidden>
+                <input value="0" type="number" name="driveTeam" hidden>
+                <input value="0" type="number" name="attended" hidden>
+
                 <fieldset>
-                    <label>Overall assessment<br></label>
-                    <textarea rows="4" cols="38" name="overall"></textarea>
+                    <!--<label>Overall assessment<br></label>-->
+                    <!--<textarea rows="4" cols="38" name="overall"></textarea>-->
                 </fieldset>
 
                 <fieldset>
